--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <!-- bootstrap link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- meta tags for search engines -->
+    <meta name="description"
+        content="Oh no Lola. English learning platform for yound children to improve reading comprehension and vocabulary.">
+    <meta name="keywords" content="english learning, english crossword, fun story, online education">
+    <!-- title -->
     <title>Oh no Lola</title>
     <!-- favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
@@ -18,16 +23,24 @@
 </head>
 
 <body>
+    <!-- header -->
+    <header>Header</header>
 
-    <!-- javascript script -->
-    <script src="assets/js/script.js"></script>
-    <!-- bootstrap script -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-    </script>
+    <!-- main content -->
+    <main>Main content</main>
 
-
+    <!-- footer -->
+    <footer>Footer</footer>
 </body>
+<!-- javascript script -->
+<script src="assets/js/script.js"></script>
+<!-- bootstrap script -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+</script>
+
+
+
 
 
 </html>
