--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
 
 <body>
     <!-- header -->
-    <header>Header</header>
+    <header id="site-header" class="header-footer-group" role="banner">
+        <div class="header-inner section-inner">
+            <img src="assets/images/logo.png" height="50px" width="80px" alt="oh no Lola" a href="index.html">
+        </div>
+    </header>
 
     <!-- main content -->
     <main>Main content</main>
