--- a/index.html
+++ b/index.html
@@ -25,9 +25,18 @@
 <body>
     <!-- header -->
     <header id="site-header" class="header-footer-group" role="banner">
-        <div class="header-inner section-inner">
-            <img src="assets/images/logo.png" height="50px" width="80px" alt="oh no Lola" a href="index.html">
+        <div>
+             <a href="index.html">
+            <img src="assets/images/logo.png" height="50px" width="80px" alt="oh no Lola">
+        </a>
         </div>
+        <nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Learn more</a></li>
+                <li><a href="">Contact us!</a><li>
+            </ul>
+        </nav>
     </header>
 
     <!-- main content -->
