--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         </a>
         </div>
         <nav>
-            <ul>
-                <li><a href="">Home</a></li>
+            <ul id="menu">
+                <li><a href="" class="active">Home</a></li>
                 <li><a href="">Learn more</a></li>
                 <li><a href="">Contact us!</a><li>
             </ul>
