--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
             <img src="assets/images/logo.png" height="50px" width="80px" alt="oh no Lola">
         </a>
         </div>
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label">x</label>
         <nav>
             <ul id="menu">
                 <li><a href="" class="active">Home</a></li>
