--- a/index.html
+++ b/index.html
@@ -45,7 +45,14 @@
     <main>Main content</main>
 
     <!-- footer -->
-    <footer>Footer</footer>
+    <footer>
+        <ul id="footer-icons">
+            <li><a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page(opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="https://x.com" target="_blank" rel="noopener" aria-label="Visit our X page(opens in a new tab)"><i class="fa-brands fa-x-twitter"></i></a></li>
+            <li><a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page(opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="https://www.youtube.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page(opens in a new tab)"><i class="fa-brands fa-youtube"></i></a></li>
+        </ul>
+    </footer>
 </body>
 <!-- javascript script -->
 <script src="assets/js/script.js"></script>
@@ -53,6 +60,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
 </script>
+<!-- font awesome -->
+<script src="https://kit.fontawesome.com/5307206c46.js" crossorigin="anonymous"></script>
 
 
 
