--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <!-- footer -->
     <footer>
-        <ul id="footer-icons">
+        <ul id="social-sites">
             <li><a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page(opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
             <li><a href="https://x.com" target="_blank" rel="noopener" aria-label="Visit our X page(opens in a new tab)"><i class="fa-brands fa-x-twitter"></i></a></li>
             <li><a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page(opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
