add hero image and add styling to page

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <!-- header -->
     <header id="site-header" class="header-footer-group" role="banner">
         <div>
-             <a href="index.html">
-            <img src="assets/images/logo.webp" height="50px" width="80px" alt="oh no Lola">
-        </a>
+            <a href="index.html">
+                <img src="assets/images/logo.webp" height="50px" width="80px" alt="oh no Lola">
+            </a>
         </div>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
@@ -36,21 +36,35 @@
             <ul id="menu">
                 <li><a href="" class="active">Home</a></li>
                 <li><a href="">Learn more</a></li>
-                <li><a href="">Contact us!</a><li>
+                <li><a href="">Contact us!</a>
+                <li>
             </ul>
         </nav>
     </header>
 
     <!-- main content -->
-    <main>Main content</main>
+    <main>
+        <section id="hero"></section>
+        <section id="intro">
+            <h1>Oh no <em>Lola</em></h1>
+            <p></p>
+        </section>
+    </main>
 
     <!-- footer -->
     <footer>
         <ul id="social-sites">
-            <li><a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page(opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a href="https://x.com" target="_blank" rel="noopener" aria-label="Visit our X page(opens in a new tab)"><i class="fa-brands fa-x-twitter"></i></a></li>
-            <li><a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page(opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a href="https://www.youtube.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page(opens in a new tab)"><i class="fa-brands fa-youtube"></i></a></li>
+            <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page(opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li><a href="https://x.com" target="_blank" rel="noopener"
+                    aria-label="Visit our X page(opens in a new tab)"><i class="fa-brands fa-x-twitter"></i></a></li>
+            <li><a href="https://www.instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page(opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li><a href="https://www.youtube.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page(opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
+            </li>
         </ul>
     </footer>
 </body>
