adjust stylinng on hero and add intro

--- a/index.html
+++ b/index.html
@@ -44,10 +44,21 @@
 
     <!-- main content -->
     <main>
-        <section id="hero"></section>
+        <section id="hero">
+        </section>
+
         <section id="intro">
-            <h1>Oh no <em>Lola</em></h1>
-            <p></p>
+            <h2 style="color: white; text-align: center;">Oh no</h2>
+            <h1><em>Lola</em></h1>
+            <p>In the heart of a magical forest, where trees whispered ancient secrets and the pond shimmered under the
+                golden sun, lived a small duckling named Lola. She was no ordinary duck—Lola had a heart full of
+                kindness and a spirit full of adventure. Today, however, was a very special day. It was her first day of
+                school! But getting to school wasn’t as simple as walking down the street. To reach her school, Lola had
+                to make her way through the mysterious forest, a place she had always heard about but never ventured
+                into alone. What she didn’t know was that the forest was full of surprises, and along the way, Lola
+                would meet new friends, face challenges, and discover just how brave and kind she truly was. Join Lola
+                on her journey through the forest, where every step is an adventure, and every friend she helps teaches
+                her something new about courage, kindness, and the magic of the world around her.</p>
         </section>
     </main>
 
