--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
     <!-- main content -->
     <main>
         <section id="hero">
+            <h1>Join me on my way to school.</h1>
+            <h2 style="color: white; text-align: center;">Adventure awaits!</h2>
         </section>
 
         <section id="intro">
