add sections for storyline

--- a/index.html
+++ b/index.html
@@ -63,22 +63,13 @@
                 her something new about courage, kindness, and the magic of the world around her.</p>
         </section>
 
+    <!-- start of storyline -->    
         <section>
-            <div class="quiz-container">
-                <h1>Quiz</h1>
-                <div class="question">
-                  <p id="question-text">What lesson did Lola learn when helping Percy the porcupine with his hat?</p>
-                  <div class="choices">
-                    <button class="choice" onclick="checkAnswer(0)"> Always trust your instincts</button>
-                    <button class="choice" onclick="checkAnswer(1)">It’s important to be kind and helpful to others, even when you don’t expect it</button>
-                    <button class="choice" onclick="checkAnswer(2)">You should never help others</button>
-                    <button class="choice" onclick="checkAnswer(3)">Don’t talk to strangers</button>
-                  </div>
-                  <p id="feedback"></p>
-                </div>
-            
-              </div>
+            <div id="storyline" class="container">
+                <img src="" alt="">
+            </div>
         </section>
+
     </main>
 
     <!-- footer -->
