add cards and styling to storyline

--- a/index.html
+++ b/index.html
@@ -52,22 +52,272 @@
         <section id="intro">
             <h2 style="color: white; text-align: center;">Oh no</h2>
             <h1><em>Lola</em></h1>
-            <p>In the heart of a magical forest, where trees whispered ancient secrets and the pond shimmered under the
-                golden sun, lived a small duckling named Lola. She was no ordinary duck—Lola had a heart full of
-                kindness and a spirit full of adventure. Today, however, was a very special day. It was her first day of
-                school! But getting to school wasn’t as simple as walking down the street. To reach her school, Lola had
-                to make her way through the mysterious forest, a place she had always heard about but never ventured
-                into alone. What she didn’t know was that the forest was full of surprises, and along the way, Lola
-                would meet new friends, face challenges, and discover just how brave and kind she truly was. Join Lola
-                on her journey through the forest, where every step is an adventure, and every friend she helps teaches
-                her something new about courage, kindness, and the magic of the world around her.</p>
         </section>
 
-    <!-- start of storyline -->    
         <section>
-            <div id="storyline" class="container">
-                <img src="" alt="">
+            <div id="welcome-message">
+                <p>Welcome to the Reading Adventure Zone!
+
+                    Hey there, young reader! Get ready to dive into fun stories full of exciting adventures, lovable
+                    characters, and important lessons. Whether you're reading all on your own or with a grown-up, our
+                    stories will take you on journeys that will help you learn new words, improve your reading skills,
+                    and
+                    discover the magic of books!
+
+                    Today, we’ll meet Lola the Duckling, a kind and brave little bird who is setting off on her first
+                    day of
+                    school. Along the way, Lola learns about kindness, helping others, and facing her fears. What do you
+                    think Lola will discover next? Join us as we read and explore together!
+
+                    Grab your favorite snack, get comfy, and let’s begin our reading adventure!
+
+                </p>
             </div>
+        </section>
+
+
+        <!-- start of story -->
+        <h1>Once upon a time,</h1>
+        <p>in a peaceful little pond nestled in the heart of a magical forest, there lived a small,
+            fluffy duckling named Lola. Lola was gentle, kind, and always eager to lend a helping hand—well, a helping
+            wing! She had a heart full of love and curiosity about the world around her.
+
+            One sunny morning, Lola woke up excited and a little nervous. Today was a very special day—it was her first
+            day of school! She had been dreaming about this day for so long, and now, at last, it had come. But there
+            was something else that made Lola's heart beat faster. To reach her school, Lola had to walk through the
+            great forest all by herself for the very first time.
+
+            With a deep breath and a determined little quack, Lola waddled to the edge of the pond. The tall trees of
+            the forest loomed ahead, their branches swaying gently in the breeze, as if they were inviting her in. Lola
+            smiled, feeling both excited and a little bit nervous. As she took her first step into the forest, little
+            did she know that this adventure would teach her something important about kindness, courage, and helping
+            others.
+        </p>
+
+        <!-- start of storyline -->
+
+        <section>
+            <div class="col align-self-center">
+                <div class="card">
+                    <img src="assets/images/lola-porkie.webp" class="card-img-top"
+                        alt="duckling and a porcupine in the forest">
+                    <div class="card-body">
+                        <h2 class="card-title">Oh, where could it be?</h2>
+                        <p class="card-text">As Lola waddled deeper into the forest, the birds chirped happily overhead,
+                            and the leaves rustled beneath her tiny feet. The sunlight filtered through the trees,
+                            casting playful shadows on the ground. It was such a beautiful day, but Lola's thoughts were
+                            still focused on her first day of school. She walked a little faster, excited to see what
+                            the day would bring.
+
+                            Suddenly, she heard a soft, sad voice coming from behind a bush. "Oh, where could it be? I
+                            can't find it anywhere!" Lola's little heart fluttered with concern. She hurried over to see
+                            who needed help.
+
+                            There, standing with a puzzled look on his face, was a small porcupine. His little quills
+                            were puffed up in all directions, and he was looking around frantically, as if he had lost
+                            something very important.
+
+                            "Hello! My name's Lola. Are you okay?" she asked with a friendly quack.
+
+                            The porcupine turned around, his face brightening just a little when he saw the kind
+                            duckling. "Oh, hello! I'm Percy. I seem to have lost my hat. I was wearing it this morning,
+                            and now I can't find it anywhere!"
+
+                            Lola looked at the little porcupine, his quills pointing in every direction. "Your hat?" she
+                            asked, tilting her head. "Where was the last place you saw it?"
+
+                            Percy looked confused. "I had it on when I was walking through the forest, but now it's
+                            gone! I don’t know where it could be!"
+
+                            Lola thought for a moment, then her eyes widened with an idea. "I think I know where your
+                            hat is!" she said. "Let me take a closer look."
+
+                            Lola waddled over to Percy and carefully examined his back. And there it was! His little hat
+                            was stuck in the middle of his quills, hidden by all the spiky, soft points.
+
+                            "Percy!" Lola giggled. "Your hat is right there, stuck in your quills! You didn’t lose
+                            it—it's been with you all along!"
+
+                            Percy blinked in surprise. "What? Oh my goodness, I didn't even notice! How silly of me."
+
+                            Lola carefully helped Percy untangle his quills, and with a gentle tug, she pulled the
+                            little hat free. Percy put it back on his head, smiling from ear to ear.
+
+                            "Thank you so much, Lola!" Percy said, feeling very relieved. "You saved the day! I’m so
+                            glad you came along."
+
+                            Lola smiled back. "I’m happy to help, Percy. It’s always good to look carefully before
+                            getting too worried!"
+
+                            Percy chuckled. "I’ll remember that! You're a very kind friend, Lola. I hope you have a
+                            wonderful first day of school."
+
+                            With a wave goodbye, Lola continued on her way through the forest, feeling even braver than
+                            before. She had already helped a new friend, and it felt good to know that sometimes, all it
+                            takes is a little bit of kindness—and a careful eye—to make the day a little brighter.
+
+                            As Lola waddled along, she wondered who she would meet next. The adventure was only just
+                            beginning!
+
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col align-self-center">
+                <div class="card">
+                    <img src="assets/images/butter-worm.webp" class="card-img-top"
+                        alt="sad green worm on a red mushroom">
+                    <div class="card-body">
+                        <h2 class="card-title">Oh, but I can`t fly!</h2>
+                        <p class="card-text">As Lola waddled through the forest, she spotted a tiny green worm
+                            crying on
+                            a red mushroom.
+
+                            Lola tilted her head. "Hey there, what’s wrong?"
+
+                            The worm sniffled, wiping her eyes. "I don’t want to go to flying school! I’m just a
+                            worm! I
+                            don’t even have wings! How can I possibly fly?"
+
+                            Lola grinned. "Well, guess what? You *are* going to get wings someday!"
+
+                            The worm blinked. "What? How? I’m just a worm!"
+
+                            "You’re going to be a butterfly!" Lola said proudly. "One day, you’ll have beautiful
+                            wings
+                            and
+                            fly all over the place."
+
+                            The worm’s eyes widened. "A butterfly? Really? Me?"
+
+                            "Yep! But here's the thing," Lola added, "You’ve got to be patient. It takes time for
+                            your
+                            wings
+                            to grow, but when they do, you’ll be ready to soar."
+
+                            The worm stared at her little body. "But I don’t have wings now. I want them *now*!"
+
+                            Lola chuckled. "I know, waiting is tough. But good things come to those who are patient.
+                            The
+                            more you grow and learn, the closer you’ll be to flying."
+
+                            The worm wiped away her last tear and smiled, her hopes lifted. "Okay, I’ll be patient.
+                            I’ll
+                            give flying school a try and wait for my wings!"
+
+                            "That’s the spirit!" Lola cheered. "Patience will make your wings even more amazing when
+                            they
+                            finally arrive."
+
+                            With a happy wriggle, the worm scurried off, excited for her butterfly future. Lola
+                            waved
+                            and
+                            waddled on, thinking about how sometimes, a little patience is all we need to get where
+                            we
+                            want
+                            to go.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col align-self-center">
+                <div class="card">
+                    <img src="assets/images/foxy-trapped.webp" class="card-img-top" alt="small fox caught in a snare">
+                    <div class="card-body">
+                        <h2 class="card-title">Be brave</h2>
+                        <p class="card-text">Lola continued her journey through the forest, her little wings fluttering
+                            with excitement as she thought about the friends she had helped today. The sun was starting
+                            to set, casting a warm golden glow across the trees, and Lola felt happy and content. But
+                            just as she turned a corner, she heard a faint whimpering sound coming from a nearby bush.
+
+                            Curious, Lola waddled over, her little heart racing with concern. As she got closer, she saw
+                            a small fox caught in a rope snare, its fluffy tail twitching in distress. The fox was
+                            young, with bright eyes full of fear, and it was struggling to free itself.
+
+                            "Oh no!" Lola gasped, her wings trembling with worry. The little fox was stuck, and it
+                            looked so scared.
+
+                            But as Lola took a step closer, she remembered what her mommy had always told her. "Be
+                            careful of foxes, Lola. They can be sneaky and tricky, and sometimes, they might even try to
+                            hurt you."
+
+                            Lola paused, her little heart torn. She had always been told to stay away from foxes, but
+                            this little fox was clearly in trouble. She could see that it was young, just a baby, and it
+                            was helpless in the snare. The poor thing was crying for help, and Lola couldn’t just leave
+                            it there.
+
+                            "I know I’m supposed to be careful," Lola thought to herself. "But I can't just leave this
+                            little fox to suffer. It needs my help, and it’s too small to do anything on its own."
+
+                            Taking a deep breath, Lola decided to trust her instincts. She waddled carefully over to the
+                            trapped fox, her mind racing with how to help. The fox’s eyes met hers, filled with fear and
+                            uncertainty, but there was also a hint of hope in those eyes, as if it knew Lola was there
+                            to help.
+
+                            "Hey there, little one," Lola said gently, trying to calm the frightened fox. "I’m Lola, and
+                            I’m here to help. Don’t worry, I won’t hurt you."
+
+                            The baby fox whined softly. "Please, can you help me? I’m stuck and I don’t know what to
+                            do!"
+
+                            Lola looked closely at the rope snare. It was tightly wound around the little fox’s leg, and
+                            it was digging into its soft fur. Lola knew she had to act carefully, so the fox wouldn’t
+                            get hurt even more.
+
+                            "I think I can help," Lola said softly, looking around for something that could help her
+                            loosen the rope. She didn’t have sharp claws like other animals, but she was clever and
+                            resourceful.
+
+                            She found a sharp stone nearby and used it to carefully cut the rope. It was tricky, but
+                            after a few patient snips, the rope finally gave way, and the fox was free! The little fox
+                            jumped up in surprise, its fur fluffed up with excitement.
+
+                            "Thank you, thank you!" the baby fox yelped, wagging its tail. "I was so scared, but you
+                            saved me!"
+
+                            Lola smiled, feeling proud of herself for making the right choice. "I’m glad I could help,"
+                            she said softly. "But you have to be more careful next time. This snare could have really
+                            hurt you."
+
+                            The baby fox looked down at the ground, a little embarrassed. "I know, I know. I was just
+                            curious and wandered too far. I’ll be more careful from now on."
+
+                            Lola thought for a moment. "I know my mommy always says to be careful around foxes, but I
+                            can see you’re just a little one, and you didn’t mean any harm. I’m glad I could help, but
+                            remember, the forest can be a dangerous place sometimes, especially if we don’t pay
+                            attention."
+
+                            The fox nodded eagerly. "I’ll remember that. Thank you for being kind and helping me when I
+                            needed it most."
+
+                            Lola smiled warmly at the little fox. "It’s what friends do. We help each other when we
+                            can."
+
+                            With a wag of its tail, the baby fox scampered off into the woods, looking back one last
+                            time at Lola. "Goodbye, Lola! Maybe we can be friends!"
+
+                            Lola waved her wing, feeling happy that she had made the right choice. "Goodbye, little fox.
+                            Be safe out there!"
+
+                            As Lola continued on her way, she thought about what had just happened. Her mommy had always
+                            warned her to be careful of foxes, but today she had learned that sometimes, being kind and
+                            helping others—no matter who they are—was the best thing to do. It wasn’t always easy to
+                            know what the right thing was, but Lola felt proud that she had trusted her heart.
+
+                            The forest was a big and mysterious place, but Lola knew that with kindness and courage, she
+                            could face any challenge that came her way. She looked forward to the rest of her journey,
+                            knowing that each new adventure would teach her something important.
+
+                            And so, Lola waddled on, her heart light and full of hope, ready to face whatever came next.
+
+
+
+                        </p>
+                    </div>
+                </div>
+            </div>
+
         </section>
 
     </main>
