basic storyline complete, now build multiple choice

--- a/index.html
+++ b/index.html
@@ -318,8 +318,70 @@
                 </div>
             </div>
 
+            <div class="col align-self-center">
+                <div class="card">
+                    <img src="assets/images/school-owl.jpeg" class="card-img-top" alt="owl standing infront of school">
+                    <div class="card-body">
+                        <h2 class="card-title">School is cool</h2>
+                        <p class="card-text">After her eventful journey through the forest, Lola finally saw it—a little
+                            wooden schoolhouse tucked between the trees, with colorful flowers blooming around it. It
+                            looked just like the one in her dreams! Lola's heart fluttered with excitement as she
+                            waddled up to the entrance. She had made it to school all by herself, and she couldn’t wait
+                            to begin her very first day!
+
+                            As she approached the door, she saw other animals waiting outside, chattering excitedly.
+                            There were bunnies, squirrels, and even a few other ducklings. They were all talking about
+                            their own adventures, sharing stories of what they had done that morning. Lola smiled
+                            nervously, but she was also proud of herself. She had faced so many challenges and helped so
+                            many friends on the way.
+
+                            Before she could step inside, the door swung open, and out came the teacher—a wise old owl
+                            with round glasses perched on her beak. "Good morning, everyone!" the owl called out in a
+                            warm, welcoming voice. "Welcome to your first day of school! We’re so happy to have you all
+                            here."
+
+                            Lola’s eyes sparkled as she stepped forward. "I’m Lola! I walked through the forest all by
+                            myself today," she said proudly. "I helped a porcupine find his hat, a caterpillar named
+                            Butter understand flying school, and a baby fox who was stuck in a rope snare."
+
+                            The teacher owl nodded with a smile. "That’s wonderful, Lola! You’ve already shown that you
+                            have a kind heart and a brave spirit. I’m sure you’ll make a great student!"
+
+                            Lola blushed a little and looked around at her new classmates. They all seemed so nice, and
+                            Lola couldn’t wait to start learning with them.
+
+                            As she entered the schoolhouse, Lola took her seat at a small desk made just for little
+                            animals like her. The classroom was cozy, filled with sunlight that streamed through the
+                            windows, and there were pictures of animals and plants on the walls.
+
+                            The teacher owl began the first lesson, talking about the wonders of the forest and how
+                            every animal had its own important role. Lola listened carefully, her eyes wide with
+                            curiosity. There was so much to learn!
+
+                            Throughout the day, Lola made new friends, and they all shared their own adventures too. She
+                            learned about the different animals of the forest, how they lived, and how everyone worked
+                            together to keep the forest a safe and happy place. Lola even shared her own story about
+                            helping others on her journey.
+
+                            As the school bell rang at the end of the day, Lola felt a sense of pride. She had made it
+                            through her first day of school, and it had been everything she had hoped for and more. She
+                            was tired but happy, and as she waddled home, she knew that there would be many more
+                            exciting days ahead.
+
+                            Lola had learned so much already, and she was excited to see where her new adventures would
+                            take her next. With her kind heart, brave spirit, and the friends she had made, Lola knew
+                            she was ready for whatever the future held.
+
+                            And so, with a happy quack, Lola made her way home, looking forward to tomorrow’s lessons
+                            and the many adventures still to come. The forest was her classroom, and each day was a
+                            chance to learn, grow, and make the world a little brighter for those around her.
+                        </p>
+                    </div>
+                </div>
+            </div>
         </section>
 
+        
     </main>
 
     <!-- footer -->
