start javascript for multiple choice quationare

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
             </div>
         </section>
 
-        
+        <h1>You finished the story, good job!</h1>
     </main>
 
     <!-- footer -->
