build a multiple choice questionare

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- main content -->
     <main>
         <section id="hero">
-            <h1>Join me on my way to school.</h1>
+            <h1><em>Join me on my way to school.</em></h1>
             <h2 style="color: white; text-align: center;">Adventure awaits!</h2>
         </section>
 
@@ -382,6 +382,10 @@
         </section>
 
         <h1>You finished the story, good job!</h1>
+        <h2>Now that you have read Lolas story, enjoy the following games.</h2>
+
+     
+
     </main>
 
     <!-- footer -->
