adjust styling of mqc

--- a/index.html
+++ b/index.html
@@ -382,9 +382,16 @@
         </section>
 
         <h1>You finished the story, good job!</h1>
-        <h2>Now that you have read Lolas story, enjoy the following games.</h2>
+        <h2><em>Now that you have read Lolas story, enjoy the following games.</em></h2>
 
-     
+    
+        <div id="quiz">
+            <h2>Interactive quiz</h2>
+            <div id="question"></div>
+            <div id="options"></div>
+        </div>
+
+
 
     </main>
 
