add confetti js to mcq

--- a/index.html
+++ b/index.html
@@ -389,7 +389,10 @@
             <h2>Interactive quiz</h2>
             <div id="question"></div>
             <div id="options"></div>
+            <button id="con-button" role="button">Celebrate!!!</button>
+            <canvas id="confetti"></canvas>
         </div>
+<!-- confetti npm script-->
 
 
 
@@ -411,7 +414,10 @@
             </li>
         </ul>
     </footer>
+
 </body>
+
+<script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
 <!-- javascript script -->
 <script src="assets/js/script.js"></script>
 <!-- bootstrap script -->
@@ -420,6 +426,8 @@
 </script>
 <!-- font awesome -->
 <script src="https://kit.fontawesome.com/5307206c46.js" crossorigin="anonymous"></script>
+
+
 
 
 
