add button for celebrate and styling

--- a/index.html
+++ b/index.html
@@ -389,10 +389,15 @@
             <h2>Interactive quiz</h2>
             <div id="question"></div>
             <div id="options"></div>
-            <button id="con-button" role="button">Celebrate!!!</button>
-            <canvas id="confetti"></canvas>
         </div>
-<!-- confetti npm script-->
+
+        <div class="con-container">     
+            <div class=" row vertical-center">
+            <button id="con-button" role="button" class="btn btn-warning btn-lg">Celebrate!!!</button>
+                <canvas id="confetti"></canvas>
+            </div>
+         </div>
+
 
 
 
@@ -416,7 +421,7 @@
     </footer>
 
 </body>
-
+<!-- confetti npm script-->
 <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
 <!-- javascript script -->
 <script src="assets/js/script.js"></script>
