tester suggest a quiz with each seperate section, udjust quiz

--- a/index.html
+++ b/index.html
@@ -140,6 +140,15 @@
                         </div>
                     </div>
                 </div>
+                <div class="quiz-section" id="quiz1">
+                    <h2>Quiz: Patience with Percy</h2>
+                    <p>What was Percy’s problem?</p>
+                    <label><input type="radio" name="quiz1" value="1"> He lost his way in the forest.</label>
+                    <label><input type="radio" name="quiz1" value="2"> He lost his hat.</label>
+                    <label><input type="radio" name="quiz1" value="3"> He was hungry.</label>
+                    <button onclick="checkAnswer('quiz1', 2)">Submit</button>
+                    <p class="result" id="result1"></p>
+                  </div>
 
                 <div class="col align-self-center">
                     <div class="card">
@@ -183,6 +192,15 @@
                         </div>
                     </div>
                 </div>
+                <div class="quiz-section" id="quiz2">
+                    <h2>Quiz: Hope with Butter</h2>
+                    <p>What did Lola tell Butter to give her hope?</p>
+                    <label><input type="radio" name="quiz2" value="1"> That she would grow wings someday and become a butterfly.</label>
+                    <label><input type="radio" name="quiz2" value="2"> That she didn’t need wings to fly.</label>
+                    <label><input type="radio" name="quiz2" value="3"> That she could borrow wings from someone else.</label>
+                    <button onclick="checkAnswer('quiz2', 1)">Submit</button>
+                    <p class="result" id="result2"></p>
+                  </div>
 
                 <div class="col align-self-center">
                     <div class="card">
@@ -241,6 +259,15 @@
                         </div>
                     </div>
                 </div>
+                <div class="quiz-section" id="quiz3">
+                    <h2>Quiz: Trust with the Fox</h2>
+                    <p>Why did Lola decide to help the fox?</p>
+                    <label><input type="radio" name="quiz3" value="1"> Because the fox begged her to help.</label>
+                    <label><input type="radio" name="quiz3" value="2"> Because she trusted her instincts and saw that the fox was helpless.</label>
+                    <label><input type="radio" name="quiz3" value="3"> Because the fox promised her a reward.</label>
+                    <button onclick="checkAnswer('quiz3', 2)">Submit</button>
+                    <p class="result" id="result3"></p>
+                  </div>
 
                 <div class="col align-self-center">
                     <div class="card">
